# nous

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  cyrius.cyml
.github/workflows/: ci.yml  release.yml
benches/: resolver.rs
docs/: api.md
docs/architecture/: overview.md
docs/audit/: 2026-04-16.md
docs/development/: gaps.md  roadmap.md
rust-old/: Cargo.toml
rust-old/src/: lib.rs
scripts/: bench-history.sh
src/: command.cyr  error.cyr  error.rs  graph.cyr  json.cyr  lib.rs  main.cyr  nous.cyr  recipe.cyr  registry.cyr  registry_stub.rs  resolver.cyr  sort.cyr  source.cyr  strategy.cyr  sysdb.cyr  types.cyr  util.cyr  version.cyr
tests/: nous.bcyr  nous.fcyr  nous.tcyr
