[package]
name = "nous"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Nous — package resolver for AGNOS (system, marketplace, Flutter)"
homepage = "https://github.com/MacCracken/nous"
repository = "https://github.com/MacCracken/nous"
readme = "README.md"
keywords = ["package", "resolver", "dependency", "manager"]
categories = ["os"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
